--- a/.github/workflows/build-lib-vlc-simple.yml
+++ b/.github/workflows/build-lib-vlc-simple.yml
@@ -1,364 +1,215 @@
 name: build-lib-vlc-simple
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # 手动触发工作流
     inputs:
       source_branch:
-        description: 'Source repository branch to build'
+        description: 'Branch of vlc-android repo to build from'
         required: true
         default: 'libvlc-3.6.5'
         type: string
-      tag_name:
-        description: 'Tag name for the release'
+      release_tag:
+        description: 'Tag name for the GitHub Release'
         required: true
-        default: 'libvlc-v3.6.5'
+        default: 'libvlc-build'
         type: string
 
 env:
-  ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
-  ANDROID_NDK_ROOT: /usr/local/lib/android/sdk/ndk/25.2.9519653
-  GRADLE_VERSION: 8.13
-  SOURCE_REPO: https://github.com/videolan/vlc-android.git
+  # 关键环境变量
+  SOURCE_REPO: 'https://github.com/videolan/vlc-android.git'
+  BUILD_DIR: 'vlc-android-source'  # 源代码克隆目录
+  GRADLE_VERSION: '8.13'           # 与项目中的AGP 8.11.1兼容
 
 jobs:
-  Build:
+  build:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout ci repository
-      uses: actions/checkout@v4
-    
-    - name: Clone source repository
-      run: |
-        echo "Cloning source repository: ${{ env.SOURCE_REPO }}"
-        echo "Branch: ${{ github.event.inputs.source_branch }}"
-        
-        git clone --depth 1 --branch "${{ github.event.inputs.source_branch }}" \
-          "${{ env.SOURCE_REPO }}" vlc-android-source
-        
-        echo "Source repository cloned successfully"
-        echo "Source directory size:"
-        du -sh vlc-android-source/
-    
-    - name: Setup java 17 for android sdk
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-    
-    - name: Setup android sdk and ndk
-      uses: android-actions/setup-android@v3
-      with:
-        ndk-version: '25.2.9519653'
-        cmdline-tools-version: '11076708'  # 使用旧版本，兼容JDK 8
-    
-    - name: Setup java 8 for vlc build
-      uses: actions/setup-java@v4
-      with:
-        distribution: 'temurin'
-        java-version: '8'
-    
-    - name: Install build dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          automake \
-          ant \
-          autopoint \
-          cmake \
-          build-essential \
-          libtool-bin \
-          patch \
-          pkg-config \
-          protobuf-compiler \
-          ragel \
-          subversion \
-          unzip \
-          git \
-          flex \
-          python3 \
-          python3-pip \
-          wget \
-          ninja-build \
-          meson \
-          nasm \
-          yasm \
-          libssl-dev \
-          gobject-introspection \
-          libgirepository1.0-dev
-    
-    - name: Setup gradle
-      uses: gradle/actions/setup-gradle@v3
-      with:
-        gradle-version: ${{ env.GRADLE_VERSION }}
-    
-    - name: Configure build environment
-      run: |
-        cd vlc-android-source
-        
-        # 检查Android SDK和NDK
-        echo "Android SDK path: $ANDROID_SDK"
-        echo "Android NDK path: $ANDROID_NDK"
-        
-        # 创建local.properties文件
-        echo "sdk.dir=$ANDROID_SDK" > local.properties
-        echo "ndk.dir=$ANDROID_NDK" >> local.properties
-        
-        # 创建gradle.properties文件
-        echo "android.enableJetifier=true" > gradle.properties
-        echo "android.useAndroidX=true" >> gradle.properties
-        echo "kapt.incremental.apt=true" >> gradle.properties
-        echo "kapt.use.worker.api=true" >> gradle.properties
-        echo "kapt.include.compile.classpath=false" >> gradle.properties
-        echo "keyStoreFile=$HOME/.android/debug.keystore" >> gradle.properties
-        echo "storealias=androiddebugkey" >> gradle.properties
-        echo "storepwd=android" >> gradle.properties
-        
-        # 初始化gradle wrapper
-        chmod +x gradlew 2>/dev/null || true
-        ./gradlew wrapper --gradle-version=$GRADLE_VERSION || echo "Gradle wrapper initialized"
-        
-        echo "Build environment configured"
-    
-    - name: Build libvlc for arm64
-      run: |
-        cd vlc-android-source
-        
-        export ANDROID_SDK="$ANDROID_SDK_ROOT"
-        export ANDROID_NDK="$ANDROID_NDK_ROOT"
-        export PATH="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH"
-        
-        echo "Building for ABI: arm64-v8a, ARCH: arm64 with release configuration"
-        
-        # 构建libvlc，使用release模式
-        chmod +x buildsystem/compile.sh
-        ./buildsystem/compile.sh -l -a arm64 --release
-        
-        # 查找生成的aar文件
-        echo "Looking for release AAR files..."
-        
-        # 在libvlc模块的输出目录中查找
-        if [ -d "libvlcjni/libvlc/build/outputs/aar" ]; then
-          echo "Checking libvlcjni/libvlc/build/outputs/aar directory..."
-          find libvlcjni/libvlc/build/outputs/aar -name "*.aar" -type f
-          
-          # 查找release版本
-          AAR_FILE=$(find libvlcjni/libvlc/build/outputs/aar -name "*release*.aar" -type f | head -1)
-          if [ -z "$AAR_FILE" ]; then
-            AAR_FILE=$(find libvlcjni/libvlc/build/outputs/aar -name "*.aar" -type f | head -1)
+      # 步骤 1: 检出 CI 仓库自身（可选，用于存放脚本）
+      - name: Checkout CI repository
+        uses: actions/checkout@v4
+
+      # 步骤 2: 克隆 VLC 安卓源代码仓库
+      - name: Clone source repository
+        run: |
+          echo "📥 Cloning source repo: ${{ env.SOURCE_REPO }}"
+          echo "📂 Target branch: ${{ github.event.inputs.source_branch }}"
+          # 深度克隆指定分支以节省时间和空间
+          git clone --depth 1 --branch "${{ github.event.inputs.source_branch }}" \
+            "${{ env.SOURCE_REPO }}" "${{ env.BUILD_DIR }}"
+          echo "✅ Source code cloned."
+
+      # 步骤 3: 设置统一的 Java 环境 (使用 Java 17)
+      - name: Setup java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: 'gradle'
+
+      # 步骤 4: 安装系统构建依赖
+      - name: Install build dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            automake autopoint cmake build-essential libtool \
+            patch pkg-config ragel subversion unzip git \
+            flex python3 wget ninja-build meson nasm yasm \
+            libssl-dev
+
+      # 步骤 5: 设置 Android 环境 (SDK & NDK)
+      - name: Setup android sdk and ndk
+        uses: android-actions/setup-android@v3
+        # 无需额外配置，Action会自动设置最新的稳定版命令行工具和NDK
+        # 并接受许可协议。
+
+      # 步骤 6: 配置项目构建环境
+      - name: Configure project environment
+        run: |
+          cd "${{ env.BUILD_DIR }}"
+          echo "🛠️  Configuring build environment..."
+
+          # 1. 创建 local.properties，指向 CI 环境中的 SDK/NDK
+          echo "sdk.dir=$ANDROID_SDK" > local.properties
+          echo "ndk.dir=$ANDROID_NDK" >> local.properties
+          echo "✅ Created local.properties"
+
+          # 2. 确保使用兼容的 Gradle 版本
+          # 检查并更新 gradle-wrapper.properties 文件
+          WRAPPER_PROPERTIES="gradle/wrapper/gradle-wrapper.properties"
+          if [ -f "$WRAPPER_PROPERTIES" ]; then
+            echo "📄 Updating Gradle wrapper to version ${{ env.GRADLE_VERSION }}"
+            sed -i.bak "s|distributionUrl=.*|distributionUrl=https\\\\://services.gradle.org/distributions/gradle-${{ env.GRADLE_VERSION }}-all.zip|" "$WRAPPER_PROPERTIES"
+          else
+            echo "⚠️  Gradle wrapper properties not found, it will be generated by the build script."
           fi
-        else
-          echo "Searching in whole project..."
-          AAR_FILE=$(find . -name "*.aar" -type f | head -1)
-        fi
-        
-        if [ -n "$AAR_FILE" ]; then
-          echo "Found AAR: $AAR_FILE"
-          cp "$AAR_FILE" ../libvlc-arm64-release.aar
-          echo "Copied AAR to workspace root"
-        else
-          echo "ERROR: No AAR file found for arm64 build!"
-          exit 1
-        fi
-        
-        # 复制构建的so文件（可选）
-        mkdir -p ../build-output/arm64
-        find . -name "*.so" -type f -path "*/arm64*" -exec cp {} ../build-output/arm64/ \; 2>/dev/null || true
-    
-    - name: Build libvlc for arm
-      run: |
-        cd vlc-android-source
-        
-        export ANDROID_SDK="$ANDROID_SDK_ROOT"
-        export ANDROID_NDK="$ANDROID_NDK_ROOT"
-        export PATH="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH"
-        
-        echo "Building for ABI: armeabi-v7a, ARCH: arm with release configuration"
-        
-        # 清理之前的构建，确保重新构建
-        rm -rf libvlcjni/libvlc/build/outputs/aar/*.aar 2>/dev/null || true
-        
-        # 构建libvlc，使用release模式
-        chmod +x buildsystem/compile.sh
-        ./buildsystem/compile.sh -l -a arm --release
-        
-        # 查找生成的aar文件
-        echo "Looking for release AAR files..."
-        
-        # 在libvlc模块的输出目录中查找
-        if [ -d "libvlcjni/libvlc/build/outputs/aar" ]; then
-          echo "Checking libvlcjni/libvlc/build/outputs/aar directory..."
-          find libvlcjni/libvlc/build/outputs/aar -name "*.aar" -type f
+
+          # 3. 给构建脚本添加执行权限
+          chmod +x buildsystem/compile.sh || true
+          echo "✅ Environment configuration complete."
+
+      # 步骤 7: 为 ARM64 架构构建 LibVLC
+      - name: Build for arm64 (arm64-v8a)
+        run: |
+          cd "${{ env.BUILD_DIR }}"
+          echo "🏗️  Starting RELEASE build for ARM64..."
+          # 关键构建命令：-l 仅构建 LibVLC，-a 指定架构，--release 发布模式
+          ./buildsystem/compile.sh -l -a arm64 --release
+          echo "✅ ARM64 build finished."
           
-          # 查找release版本
-          AAR_FILE=$(find libvlcjni/libvlc/build/outputs/aar -name "*release*.aar" -type f | head -1)
-          if [ -z "$AAR_FILE" ]; then
-            AAR_FILE=$(find libvlcjni/libvlc/build/outputs/aar -name "*.aar" -type f | head -1)
-          fi
-        else
-          echo "Searching in whole project..."
-          AAR_FILE=$(find . -name "*.aar" -type f | head -1)
-        fi
-        
-        if [ -n "$AAR_FILE" ]; then
-          echo "Found AAR: $AAR_FILE"
-          cp "$AAR_FILE" ../libvlc-arm-release.aar
-          echo "Copied AAR to workspace root"
-        else
-          echo "ERROR: No AAR file found for arm build!"
-          exit 1
-        fi
-        
-        # 复制构建的so文件（可选）
-        mkdir -p ../build-output/arm
-        find . -name "*.so" -type f -path "*/armeabi-v7a*" -exec cp {} ../build-output/arm/ \; 2>/dev/null || true
-    
-    - name: Merge multi abi aar
-      run: |
-        echo "Merging multi-ABI AAR files..."
-        
-        # 检查是否有至少一个aar文件
-        if [ ! -f "libvlc-arm64-release.aar" ] && [ ! -f "libvlc-arm-release.aar" ]; then
-          echo "ERROR: No AAR files found to merge!"
-          exit 1
-        fi
-        
-        # 创建临时目录
-        mkdir -p merged-aar/jni
-        
-        # 使用第一个可用的aar作为基础
-        if [ -f "libvlc-arm64-release.aar" ]; then
-          BASE_AAR="libvlc-arm64-release.aar"
-        else
-          BASE_AAR="libvlc-arm-release.aar"
-        fi
-        
-        echo "Using $BASE_AAR as base"
-        unzip -q "$BASE_AAR" -d merged-aar
-        
-        # 合并其他ABI的so文件
-        if [ -f "libvlc-arm-release.aar" ] && [ "$BASE_AAR" != "libvlc-arm-release.aar" ]; then
-          echo "Merging libvlc-arm-release.aar"
-          mkdir -p temp-aar
-          unzip -q "libvlc-arm-release.aar" -d temp-aar
+          # 查找生成的 AAR 文件 (通常在 libvlc 模块的输出目录)
+          find . -name "*.aar" -type f | head -5 || echo "No AAR files found yet."
           
-          # 复制jni目录（如果存在）
-          if [ -d "temp-aar/jni" ]; then
-            cp -r temp-aar/jni/* merged-aar/jni/ 2>/dev/null || true
+      # 步骤 8: 为 ARMv7 架构构建 LibVLC
+      - name: Build for armv7 (armeabi-v7a)
+        run: |
+          cd "${{ env.BUILD_DIR }}"
+          echo "🧹 Cleaning previous AAR outputs..."
+          # 清理上一次构建的AAR输出，确保独立构建
+          rm -f libvlcjni/libvlc/build/outputs/aar/*.aar 2>/dev/null || true
+          
+          echo "🏗️  Starting RELEASE build for ARMv7..."
+          ./buildsystem/compile.sh -l -a arm --release
+          echo "✅ ARMv7 build finished."
+          
+          # 再次查找 AAR 文件，确认生成
+          find . -name "*.aar" -type f | head -5 || echo "No AAR files found."
+
+      # 步骤 9: 定位并准备构建产物
+      - name: Prepare build artifacts
+        run: |
+          cd "${{ env.BUILD_DIR }}"
+          echo "📦 Preparing build artifacts..."
+          
+          # 在标准输出目录查找 Release 版本的 AAR
+          AAR_DIR="libvlcjni/libvlc/build/outputs/aar"
+          if [ -d "$AAR_DIR" ]; then
+            echo "Looking in: $AAR_DIR"
+            # 复制所有找到的 AAR 到工作区根目录以便后续处理
+            cp $AAR_DIR/*release*.aar ../ 2>/dev/null || cp $AAR_DIR/*.aar ../ 2>/dev/null || true
           fi
           
-          rm -rf temp-aar
-        fi
-        
-        if [ -f "libvlc-arm64-release.aar" ] && [ "$BASE_AAR" != "libvlc-arm64-release.aar" ]; then
-          echo "Merging libvlc-arm64-release.aar"
-          mkdir -p temp-aar
-          unzip -q "libvlc-arm64-release.aar" -d temp-aar
-          
-          # 复制jni目录（如果存在）
-          if [ -d "temp-aar/jni" ]; then
-            cp -r temp-aar/jni/* merged-aar/jni/ 2>/dev/null || true
+          # 回到工作区根目录查看结果
+          cd ..
+          echo "Found AAR files:"
+          ls -la *.aar 2>/dev/null || echo "⚠️  No AAR files copied to workspace root."
+
+      # 步骤 10: 合并多架构 AAR
+      - name: Merge multi-abi aar
+        run: |
+          echo "🔀 Merging AAR files for multi-ABI support..."
+          # 此脚本将两个架构的 .so 文件合并到一个 AAR 包中
+          # 它接受一个基础 AAR 文件名（第一个参数）和要合并的其他 AAR 文件
+          # 输出为 libvlc-release.aar
+          /bin/bash -c '
+          set -e
+          BASE_AAR=""
+          for aar in *.aar; do
+              if [ -n \"$aar\" ] && [ -f \"$aar\" ]; then
+                  if [ -z \"$BASE_AAR\" ]; then
+                      BASE_AAR=\"$aar\"
+                      echo \"Using $BASE_AAR as base\"
+                      mkdir -p merged-aar
+                      unzip -q \"$BASE_AAR\" -d merged-aar
+                  else
+                      echo \"Merging $aar\"
+                      mkdir -p temp-merge
+                      unzip -q \"$aar\" -d temp-merge
+                      # 关键：合并 jni 目录下的原生库
+                      if [ -d \"temp-merge/jni\" ]; then
+                          cp -rf temp-merge/jni/. merged-aar/jni/ 2>/dev/null || true
+                      fi
+                      rm -rf temp-merge
+                  fi
+              fi
+          done
+          if [ -n \"$BASE_AAR\" ] && [ -d \"merged-aar\" ]; then
+              cd merged-aar
+              zip -qr ../libvlc-release.aar .
+              cd ..
+              echo \"✅ Created merged AAR: libvlc-release.aar\"
+              echo \"📊 Contents:\"
+              unzip -l libvlc-release.aar | grep -E \"(\\.so$|AndroidManifest\\.xml|classes\\.jar)\" | head -20
+          else
+              echo \"❌ Failed to create merged AAR. No valid input files?\"
+              exit 1
           fi
-          
-          rm -rf temp-aar
-        fi
-        
-        # 重新打包为aar
-        cd merged-aar
-        zip -qr ../libvlc-release.aar .
-        cd ..
-        
-        # 显示文件信息
-        echo "Generated merged AAR: libvlc-release.aar"
-        ls -lh libvlc-release.aar
-        
-        # 验证内容
-        echo "Checking AAR contents:"
-        unzip -l libvlc-release.aar | grep "\.so$" || echo "No .so files found"
-        
-        # 验证架构
-        echo "Verifying architectures in AAR:"
-        if unzip -l libvlc-release.aar | grep -q "arm64-v8a"; then
-          echo "✓ ARM64 (arm64-v8a) architecture found"
-        else
-          echo "✗ ARM64 architecture not found"
-        fi
-        
-        if unzip -l libvlc-release.aar | grep -q "armeabi-v7a"; then
-          echo "✓ ARMv7 (armeabi-v7a) architecture found"
-        else
-          echo "✗ ARMv7 architecture not found"
-        fi
-    
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: libvlc-release-build
-        path: |
-          libvlc-release.aar
-          libvlc-*-release.aar
-          build-output/
-        retention-days: 30
-    
-    - name: Create release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: |
-          libvlc-release.aar
-        tag_name: ${{ github.event.inputs.tag_name }}-$(date +'%Y%m%d-%H%M%S')
-        name: LibVLC Release Build - ${{ github.event.inputs.source_branch }}
-        body: |
-          # LibVLC Release Build
-          
-          This release contains a merged AAR file with both ARM architectures:
-          - ARM64 (arm64-v8a)
-          - ARMv7 (armeabi-v7a)
-          
-          ## Build Information
-          - Source Repository: ${{ env.SOURCE_REPO }}
-          - Source Branch: ${{ github.event.inputs.source_branch }}
-          - Build Date: $(date -u '+%Y-%m-%d %H:%M:%S UTC')
-          - CI Run ID: ${{ github.run_id }}
-          
-          ## Usage
-          
-          Add this to your app's `build.gradle`:
-          
-          ```gradle
-          dependencies {
-              implementation files('libvlc-release.aar')
-          }
-          ```
-          
-          Or if you're using a local Maven repository:
-          
-          ```gradle
-          repositories {
-              flatDir {
-                  dirs 'libs'
-              }
-          }
-          
-          dependencies {
-              implementation name: 'libvlc-release', ext: 'aar'
-          }
-          ```
-          
-          ## AAR Contents
-          
-          This AAR contains the following JNI libraries for both architectures:
-          - libvlc.so (VLC core library)
-          - libvlcjni.so (JNI bindings)
-          - Other required VLC dependencies
-          
-          ## License
-          
-          This build is licensed under the LGPLv2.1 license.
-          
-          ## Source
-          
-          Built from the official VLC Android repository:
-          - Repository: ${{ env.SOURCE_REPO }}
-          - Branch: ${{ github.event.inputs.source_branch }}
-        draft: false
-        prerelease: false
+          '
+
+      # 步骤 11: 上传构建产物
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: libvlc-build-output
+          path: |
+            libvlc-release.aar
+            *.aar
+          retention-days: 7
+
+      # 步骤 12: 创建 GitHub Release
+      - name: Create gitHub release
+        uses: softprops/action-gh-release@v1
+        if: success()  # 仅在构建成功时创建发布
+        with:
+          tag_name: ${{ github.event.inputs.release_tag }}-$(date +'%Y%m%d-%H%M%S')
+          name: "LibVLC AAR - ${{ github.event.inputs.source_branch }}"
+          body: |
+            Automated build of LibVLC for Android.
+            - **Source Branch:** ${{ github.event.inputs.source_branch }}
+            - **Build Date:** $(date -u)
+            - **Commit:** $(cd ${{ env.BUILD_DIR }} && git log -1 --oneline)
+            
+            ### Contains AAR for:
+            - ARM64-v8a
+            - ARMEABI-v7a
+            
+            ### Usage
+            Add the `libvlc-release.aar` file to your project's `libs/` folder and modify your `build.gradle`:
+            ```gradle
+            dependencies {
+                implementation files('libs/libvlc-release.aar')
+            }
+            ```
+          files: |
+            libvlc-release.aar
+          draft: false
+          prerelease: false
